<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="keyboard"
        app:title="@string/termux_keyboard_header">

        <SwitchPreferenceCompat
            app:key="soft_keyboard_enabled"
            app:summaryOff="@string/termux_soft_keyboard_enabled_off"
            app:summaryOn="@string/termux_soft_keyboard_enabled_on"
            app:title="@string/termux_soft_keyboard_enabled_title" />

        <SwitchPreferenceCompat
            app:key="soft_keyboard_enabled_only_if_no_hardware"
            app:summaryOff="@string/termux_soft_keyboard_enabled_only_if_no_hardware_off"
            app:summaryOn="@string/termux_soft_keyboard_enabled_only_if_no_hardware_on"
            app:title="@string/termux_soft_keyboard_enabled_only_if_no_hardware_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:key="split_panes"
        app:title="@string/termux_split_panes_header">

        <SwitchPreferenceCompat
            app:key="compatibility_mode"
            app:summaryOff="@string/termux_compatibility_mode_off"
            app:summaryOn="@string/termux_compatibility_mode_on"
            app:title="@string/termux_compatibility_mode_title" />

    </PreferenceCategory>

</PreferenceScreen>
