<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:key="keyboard_layout" app:title="@string/settings_keyboard_layout_keys_header">
        <MultiSelectListPreference
            app:key="in_app_keyboard_extra_keys"
            app:summary="@string/settings_extra_keys_summary"
            app:title="@string/settings_extra_keys_title" />
        <Preference
            app:key="in_app_keyboard_custom_layout"
            app:summary="@string/termux_in_app_keyboard_custom_layout_summary"
            app:title="@string/termux_in_app_keyboard_custom_layout_title" />
        <Preference
            app:key="in_app_keyboard_layouts"
            app:fragment="com.termux.app.fragments.settings.termux.KeyboardLayoutsFragment"
            app:persistent="false"
            app:summary="@string/settings_keyboard_layouts_summary"
            app:title="@string/settings_keyboard_layouts_title" />
        <Preference
            app:key="keyboard_docs_layouts"
            app:summary="@string/termux_keyboard_docs_layouts_summary"
            app:title="@string/settings_layout_documentation_title" />
        <Preference
            app:key="keyboard_docs_keys"
            app:summary="@string/termux_keyboard_docs_keys_summary"
            app:title="@string/settings_supported_keys_title" />
    </PreferenceCategory>

    <PreferenceCategory app:key="keyboard_credits" app:title="@string/settings_keyboard_docs_credits_header">
        <Preference app:key="keyboard_credits_text" app:selectable="false"
            app:summary="@string/termux_keyboard_credits_summary" app:title="@string/termux_keyboard_credits_text" />
        <Preference app:key="keyboard_credits_github" app:title="@string/termux_keyboard_credits_github_title" />
        <Preference app:key="keyboard_credits_play" app:title="@string/termux_keyboard_credits_play_title" />
    </PreferenceCategory>

</PreferenceScreen>
