<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_clock_status_header">
        <SwitchPreferenceCompat
            app:key="top_pane_clock_am_pm"
            app:title="@string/settings_use_12_hour_title"
            app:summary="@string/settings_use_12_hour_summary"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="status_widget_cpu"
            app:title="@string/settings_cpu_usage_title"
            app:summary="@string/termux_status_widget_cpu_summary"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="status_widget_ram"
            app:title="@string/settings_memory_usage_title"
            app:summary="@string/settings_memory_usage_summary"
            app:defaultValue="false" />
        <SwitchPreferenceCompat
            app:key="status_widget_weather"
            app:title="@string/settings_weather_title"
            app:summary="@string/settings_weather_summary"
            app:defaultValue="true" />
        <SwitchPreferenceCompat
            app:key="status_widget_weather_fahrenheit"
            app:title="@string/settings_weather_fahrenheit_title"
            app:summary="@string/settings_weather_fahrenheit_summary"
            app:defaultValue="false"
            app:dependency="status_widget_weather" />
        <Preference
            app:key="status_bar_notifications_link"
            app:persistent="false"
            app:title="@string/settings_destination_notifications"
            app:summary="@string/settings_status_bar_notifications_link_summary"
            app:fragment="com.termux.app.fragments.settings.termux.NotificationsPreferencesFragment" />
    </PreferenceCategory>

</PreferenceScreen>
